welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: illegal start of statement (no modifiers allowed here)
	override def forward(i:Int)  { 
        ^ColumnByColumn:14: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^ColumnByColumn:17: error: illegal start of statement (no modifiers allowed here)
	override def backward(i:Int) {
        ^ColumnByColumn:20: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^ColumnByColumn:23: error: Missing closing brace `}' assumed here
}
^